--- a/guestBook.html
+++ b/guestBook.html
@@ -19,17 +19,32 @@
   </head>
   <body>
     <header>
-      <h1>A Life of Service and Love: Honoring Bob and Sue</h1>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./life.html">Life</a></li>
-          <li><a href="./service.html">Service</a></li>
-          <li><a href="./legacy.html">Legacy</a></li>
-          <li><a href="./guestBook.html">GuestBook</a></li>
-        </ul>
-      </nav>
-    </header>
+  <h1>A Life of Service and Love: Honoring Bob and Sue</h1>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./life.html">Life</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./service.html">Service</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./legacy.html">Legacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./guestBook.html">GuestBook</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
     <main>
       <section class="container py-5">
         <h2>Guest Book</h2>
