--- a/life.html
+++ b/life.html
@@ -55,6 +55,7 @@
       </section>
     </main>
     <footer>Copyright - Bomyea. 2026</footer>
-    <script src="script.js"></script>
-  </body>
-</html>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
+</body>
